--- a/pizzaplace/index.html
+++ b/pizzaplace/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel='icon' href='images/favicon.png' type='image/x-icon'>
     <title>PIZZA PLACE</title>
 </head>
 
@@ -42,33 +45,6 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="d-block w-100" src="images/pizza.png" alt="First slide">
-                    <div class="text-block">
-                        <form style="padding: 20px;">
-                            <div class="form-group">
-                              <label for="inputLocation">Delivering to...</label>
-                              <input type="text" class="form-control" id="delivery" aria-describedby="textHelp">
-                              <small id="textHelp" class="form-text text-muted">Select your city</small>
-                            </div>
-                            <div class="form-group">
-                                <label for="Location">Area:</label>
-                                <input type="text" class="form-control" id="delivery" aria-describedby="textHelp">
-                                <small id="textHelp" class="form-text text-muted">Select your area</small>
-                            </div>
-                                <div class="dropdown">
-                                    <button class="dropbtn">Dropdown</button>
-                                    <div class="dropdown-content">
-                                    <a href="#">Link 1</a>
-                                    <a href="#">Link 2</a>
-                                    <a href="#">Link 3</a>
-                                    </div>
-                                </div>
-                            <div class="form-group form-check">
-                              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                              <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
-                          </form>
-                    </div>
                     <div class="carousel-caption">
                         <button type="button" class="btn btn-primary btn-lg"><a href="images/mamayumyumpizzamenu.pdf" target="_blank">View Menu</a></button>
                         <button type="button" class="btn btn-secondary btn-lg">Order Online</button>
@@ -81,15 +57,89 @@
     <br>
     <br>
 
+    <div>
+        <div class="text-block">
+            <div class="row">
+                <div class="col">
+                    <form style="padding: 20px;">
+                        <div class="form-group">
+                            <label for="name">Placing Order For...</label>
+                            <input type="text" class="form-control" id="delivery" aria-describedby="textHelp">
+                            <small id="textHelp" class="form-text text-muted">First and Last Name</small>
+                        </div>
+                        <div class="form-group">
+                          <label for="inputLocation"></label>
+                          <input type="text" class="form-control" id="delivery" aria-describedby="textHelp">
+                          <small id="textHelp" class="form-text text-muted">City</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="Location"></label>
+                            <input type="text" class="form-control" id="delivery" aria-describedby="textHelp">
+                            <small id="textHelp" class="form-text text-muted">Area</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="Location"></label>
+                            <input type="text" class="form-control" id="delivery" aria-describedby="textHelp">
+                            <small id="textHelp" class="form-text text-muted">Home Address (street address, house number, estate)</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="Location"></label>
+                            <input type="number" class="form-control" id="delivery" aria-describedby="textHelp">
+                            <small id="textHelp" class="form-text text-muted">phone number</small>
+                        </div>
+                      </form>
+                </div>
+                <div class="col">
+                    <form style="padding: 20px;">
+                        <div class="form-group">
+                          <label for="inputLocation">Place Your Order</label>
+                          <input type="text" class="form-control" id="delivery" aria-describedby="textHelp">
+                          <small id="textHelp" class="form-text text-muted">Select your city</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="Location">Area:</label>
+                            <input type="text" class="form-control" id="delivery" aria-describedby="textHelp">
+                            <small id="textHelp" class="form-text text-muted">Select your area</small>
+                        </div>
+                        <div class="form-group form-check">
+                          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                      </form>
+                </div>
+                <div class="col">
+                    <form style="padding: 20px;">
+                        <div class="form-group">
+                          <label for="inputLocation">Payment Details</label>
+                          <input type="text" class="form-control" id="delivery" aria-describedby="textHelp">
+                          <small id="textHelp" class="form-text text-muted">Select your city</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="Location">Area:</label>
+                            <input type="text" class="form-control" id="delivery" aria-describedby="textHelp">
+                            <small id="textHelp" class="form-text text-muted">Select your area</small>
+                        </div>
+                        <div class="form-group form-check">
+                          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                      </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div style="text-align: center; margin-top: ;">
-        <h3 style="color: black;">
+        <h1 style="color: black;">
             What We Can Offer
-        </h3>
+        </h1>
         <small class="text-muted">from the bottom of our hearts</small>
     </div>
     
     <div class="features">
-        <div class="row">
+        <div class="row" style="text-align: center;">
             <div class="col">
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="images/placeholdercard.png" alt="Card image cap">
