add products and prices on the index file

--- a/pizzaplace/index.html
+++ b/pizzaplace/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel='icon' href='images/favicon.png' type='image/x-icon'>
+    <link rel='icon' href='images/slider-logo.png' type='image/x-icon'>
     <title>PIZZA PLACE</title>
 </head>
 
@@ -57,7 +57,99 @@
     <br>
     <br>
 
-    <div>
+
+    <div style="text-align: center; margin-top: ;">
+        <h1 style="color: black;">
+            Menu
+        </h1>
+        <small class="text-muted">finger licking foods</small>
+    </div>
+    <br>
+
+    <div class="row" style="text-align: center;">
+        <div class="col">
+            <div class="card">
+                <img src="images/food.jpg" alt="food" style="width:100%">
+                <h1>Pepperoni</h1>
+                <p class="size"></p>
+                <p class="price">Kes. 1,200</p>
+                <p><button>Add to Cart</button></p>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="images/food.jpg" alt="food" style="width:100%">
+                <h1>All Vegetables</h1>
+                <p class="price">Kes. 900</p>
+                <p><button>Add to Cart</button></p>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="images/food.jpg" alt="food" style="width:100%">
+                <h1>Hawaiian</h1>
+                <p class="price">Kes. 900</p>
+                <p><button>Add to Cart</button></p>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="images/food.jpg" alt="food" style="width:100%">
+                <h1>Mergherita</h1>
+                <p class="price">Kes. 700</p>
+                <p><button>Add to Cart</button></p>
+            </div>
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="row" style="text-align: center;">
+        <div class="col">
+            <div class="card">
+                <img src="images/food.jpg" alt="food" style="width:100%">
+                <h1>Mushroom Fontina</h1>
+                <p class="price">Kes. 1,200</p>
+                <p><button>Add to Cart</button></p>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="images/food.jpg" alt="food" style="width:100%">
+                <h1>Mozzarella Pizza</h1>
+                <p class="price">Kes. 2,200</p>
+                <p><button>Add to Cart</button></p>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="images/food.jpg" alt="food" style="width:100%">
+                <h1>Tailored Jeans</h1>
+                <p class="price">Kes. 800</p>
+                <p><button>Add to Cart</button></p>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="images/food.jpg" alt="food" style="width:100%">
+                <h1>Salami & Mushroom</h1>
+                <p class="price">Kes. 1,400</p>
+                <p><button>Add to Cart</button></p>
+            </div>
+        </div>
+    </div>
+
+    <br>
+    <br>
+    <br>
+
+    <div style="text-align: center; margin-top: ;">
+        <h1 style="color: black;">
+            Placed Order
+        </h1>
+        <small class="text-muted">at zero delivery costs</small>
+    </div>
+
+    <div class="orders">
         <div class="text-block">
             <div class="row">
                 <div class="col">
@@ -92,7 +184,7 @@
                 <div class="col">
                     <form style="padding: 20px;">
                         <div class="form-group">
-                          <label for="inputLocation">Place Your Order</label>
+                          <label for="inputLocation">Your Order</label>
                           <input type="text" class="form-control" id="delivery" aria-describedby="textHelp">
                           <small id="textHelp" class="form-text text-muted">Select your city</small>
                         </div>
@@ -142,7 +234,7 @@
         <div class="row" style="text-align: center;">
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="images/placeholdercard.png" alt="Card image cap">
+                    <img class="card-img-top" src="images/interior.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -153,7 +245,7 @@
             </div>
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="images/placeholdercard.png" alt="Card image cap">
+                    <img class="card-img-top" src="images/service.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -164,7 +256,7 @@
             </div>
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="images/placeholdercard.png" alt="Card image cap">
+                    <img class="card-img-top" src="images/food.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -175,7 +267,7 @@
             </div>
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="images/placeholdercard.png" alt="Card image cap">
+                    <img class="card-img-top" src="images//img-e1586423796544.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -194,7 +286,7 @@
         </blockquote>
     </div>
     
-
+    
 
 </body>
 <footer style="text-align:centre; margin-left: 50px; margin-right: 50px;">
